5.6 - correction page utilisateur: wrap  card et bouton

--- a/src/app/components/suppr-aliment/suppr-aliment.component.css
+++ b/src/app/components/suppr-aliment/suppr-aliment.component.css
@@ -41,7 +41,7 @@ h2 {
   background-color: #982312;
   border: none;
   cursor: pointer;
-  border-radius: 30;
+  border-radius: 1.88rem;
   width: 12rem;
   height: 2.5rem;
   margin-bottom: 1.5rem;
